[gd_scene load_steps=2 format=3 uid="uid://cn45sa1hr0ypd"]

[ext_resource type="Script" path="res://scripts/menus/character_selection_menu.gd" id="1_7ooow"]

[node name="CharacterSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7ooow")

[node name="CharacterSelectionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -200.0
offset_right = 256.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CharacterSelectionPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Character1Button" type="Button" parent="CharacterSelectionPanel/HBoxContainer"]
layout_mode = 2
text = "Male Lizard-Brute"

[node name="Character2Button" type="Button" parent="CharacterSelectionPanel/HBoxContainer"]
layout_mode = 2
text = "Female Elf wiazard/Druid"

[node name="Character3Button" type="Button" parent="CharacterSelectionPanel/HBoxContainer"]
layout_mode = 2
text = "Demon/imp Rouge"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 45.0
offset_bottom = 15.5
grow_vertical = 2
text = "Back
"

[node name="EmbarkButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -68.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Embark
"

[node name="CharacterNameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.5
offset_top = -11.5
offset_right = 71.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CHARACTER NAME
"

[node name="CharacterDescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 8.5
offset_right = 100.0
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
text = "CHARACTER DESCRIPTION"

[node name="CharacterHPLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -31.0
offset_top = 48.5
offset_right = 31.0
offset_bottom = 71.5
grow_horizontal = 2
grow_vertical = 2
text = "100/100"

[node name="CharacterTypeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = 28.5
offset_right = 67.0
offset_bottom = 51.5
grow_horizontal = 2
grow_vertical = 2
text = "CHARACTER TYPE
"

[connection signal="pressed" from="CharacterSelectionPanel/HBoxContainer/Character1Button" to="." method="_on_character_1_button_pressed"]
[connection signal="pressed" from="CharacterSelectionPanel/HBoxContainer/Character2Button" to="." method="_on_character_2_button_pressed"]
[connection signal="pressed" from="CharacterSelectionPanel/HBoxContainer/Character3Button" to="." method="_on_character_3_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="EmbarkButton" to="." method="_on_embark_button_pressed"]
